CSS: fixed a strange flickering in the sidebar filter

--- a/app/styles/components/annotation-sidebar.less
+++ b/app/styles/components/annotation-sidebar.less
@@ -126,7 +126,7 @@
             .pnd-annotation-sidebar-filter-label {
                 width: @annotation-sidebar-exp-width - 24;
                 display: inline-block;
-                padding: 6px 0 6px 10px;
+                padding: 8px 0 8px 10px;
             }
 
             .pnd-annotation-sidebar-filter-label + .pnd-icon {
@@ -139,7 +139,7 @@
 
     /* Filter for broken annotations */
     .pnd-annotation-sidebar-filter-broken {
-        padding: 6px 6px 6px 10px;
+        padding: 8px 6px 8px 10px;
         border-top: 1px solid @color-border-normal;
         width: @annotation-sidebar-exp-width;
         font-weight: bold;
@@ -158,7 +158,7 @@
         }
 
         input {
-            margin: 0 0 10px 0;
+            margin: 0 0 8px 0;
             padding-right: 24px;
         }
 
@@ -173,8 +173,8 @@
 
     /* Single filter element to select */
     .pnd-annotation-sidebar-filter-element {
-        margin: 5px 10px 5px 15px;
-        padding-bottom: 5px;
+        margin: 0px 10px 4px 15px;
+        padding-bottom: 4px;
         font-size: 11px;
         cursor: pointer;
 
@@ -185,10 +185,6 @@
         &.pnd-annotation-sidebar-current-filter-empt-red {
             color: @color-text-error;
             display: block;
-        }
-
-        &:first-child {
-            margin-top: 0;
         }
 
         &:last-child {
